--- a/weekly_export_sales_visualization.ipynb
+++ b/weekly_export_sales_visualization.ipynb
@@ -310,7 +310,7 @@
     "                if not year_data_grouped.empty:\n",
     "                    max_weeks = max(max_weeks, int(year_data_grouped['weeks_into_my'].max()))\n",
     "                    all_weeks = pd.DataFrame({'weeks_into_my': range(1, max_weeks + 1)})\n",
-    "                    year_data_complete = pd.merge(all_weeks, year_data_grouped, on='weeks_into_my', how='left').fillna(0)\n",
+    "                    year_data_complete = pd.merge(all_weeks, year_data_grouped, on='weeks_into_my', how='left')\n",
     "                    \n",
     "                    year_data_complete['market_year'] = year\n",
     "                    year_data_complete['marketYearStart'] = year_data['marketYearStart'].iloc[0] if not year_data['marketYearStart'].isna().all() else pd.NaT\n",
